# PhonAPI

./: .gitignore  README.md
api/: package.json  pnpm-lock.yaml  tsconfig.json
api/src/: app.ts  server.ts
api/src/adapters/transcribers/: HttpTranscriberAdapter.ts  MockTranscriberAdapter.ts  TranscriberAdapter.ts  WhisperEnAdapter.ts  XlsrPtBrAdapter.ts  httpWorkerClient.ts
api/src/modules/health/: health.controller.ts
api/src/modules/models/: model.controller.ts  model.routes.ts  model.service.ts  model.types.ts
api/src/modules/transcription/: transcription.controller.ts  transcription.routes.ts  transcription.service.ts  transcription.types.ts  transcription.upload.ts
bruno/: Health.bru  List Models.bru  Transcription.bru  bruno.json
workers/model1-fastapi/: README.md  pyproject.toml
workers/model1-fastapi/app/: audio.py  inference.py  main.py
workers/model2-fastapi/: README.md  pyproject.toml
workers/model2-fastapi/app/: inference.py  main.py
