[project]
name = "model1-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "python-multipart>=0.0.29",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "transformers>=5.8.1",
    "uvicorn>=0.47.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
torchcodec = [{ index = "pytorch-cpu" }]
